Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29707

Incorrect/bad errno on enabling wsrep_on after setting dummy wsrep_provider on non-Galera build

    XMLWordPrintable

Details

    Description

      When a non-Galera build is started with a dummy wsrep_provider:

      # mysqld options required for replay:  --wsrep_provider='dummy'
      SET GLOBAL wsrep_on=ON;
      

      It leads to:

      10.11.0 6ebdd3013a18b01dbecec76b870810329eb76586 (Debug)

      10.11.0-dbg>SET GLOBAL wsrep_on=ON;
      ERROR 1126 (HY000): Can't open shared library 'dummy' (errno: -2147284456, wsrep_init failed)
      

      10.8.5 593fdee3973ce4ab4890a6fb9f740b3a28a44edc (Debug)

      10.8.5-dbg>SET GLOBAL wsrep_on=ON;
      ERROR 1126 (HY000): Can't open shared library 'dummy' (errno: 1470566390, wsrep_init failed)
      

      10.4.27 3e3cfa893481abe9524a1657c4246fa9f91d4826 (Debug)

      10.4.27-dbg>SET GLOBAL wsrep_on=ON;
      ERROR 1126 (HY000): Can't open shared library 'dummy' (errno: 488607005, wsrep_init failed)
      

      The -2147284456 number is abritary, and it's value seems to depend on the string provided as wsrep_provider (here dummy), as well as the server version (it is not consitent between versions but it is consistent when the SQL is repeated): it looks like a bad memory read or similar.

      An UB+ASAN build does not show any related output.

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            Roel Roel Van de Paar
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3h 10m
                3h 10m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.